--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,17 +1,7 @@
-<% content_for :title, "Showing picture" %>
-
-<div class="md:w-2/3 w-full">
+<div class="px-6 py-4">
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
   <% end %>
-
-  <h1 class="font-bold text-4xl">Showing picture</h1>
-
   <%= render @picture %>
-
-  <%= link_to "Edit this picture", edit_picture_path(@picture), class: "mt-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <%= link_to "Back to pictures", pictures_path, class: "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <div class="inline-block ml-2">
-    <%= button_to "Destroy this picture", @picture, method: :delete, class: "mt-2 rounded-md px-3.5 py-2.5 text-white bg-red-600 hover:bg-red-500 font-medium cursor-pointer", data: { turbo_confirm: "Are you sure?" } %>
-  </div>
+  <%= link_to "Back To Pictures", pictures_path, class: "float-right pb-4" %>
 </div>
