--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,12 +1,16 @@
-<% content_for :title, "Pictures" %>
-
 <div class="max-w-3xl mx-auto mt-10">
   <div class="grid grid-cols-3 gap-1">
     <% @pictures.each do |picture| %>
       <div class="aspect-square overflow-hidden bg-gray-100">
         <% if picture.image.attached? %>
           <%= link_to picture do %>
-            <%= image_tag url_for(picture.image), class: "object-cover h-full w-full" %>
+            <% if picture.image.content_type.start_with?('video') %>
+              <%# For video attachments, generate a preview thumbnail.
+                  Note: This requires FFmpeg installed and Active Storage configured for video previewing. %>
+              <%= image_tag url_for(picture.image.preview(resize_to_limit: [300, 300]).processed), class: "object-cover h-full w-full" %>
+            <% else %>
+              <%= image_tag url_for(picture.image.variant(resize_to_limit: [300, 300]).processed), class: "object-cover h-full w-full" %>
+            <% end %>
           <% end %>
         <% else %>
           <span>No image</span>
