--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,10 +1,6 @@
 <div id="<%= dom_id post %>" class="my-5 space-y-5">
+  <h1 class="font-bold text-2xl"><%= post.title %></h1>
   <div>
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= post.title %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Description:</strong>
     <%= post.description %>
   </div>
 </div>
